testData/fixtures/api/simplexml_load_file-usage.php
<?php

simplexml_load_file();

<error descr="This can be affected by a PHP bug #62577 (https://bugs.php.net/bug.php?id=62577)">simplexml_load_file($filename)</error>;
<error descr="This can be affected by a PHP bug #62577 (https://bugs.php.net/bug.php?id=62577)">simplexml_load_file($filename, $class_name)</error>;
<error descr="This can be affected by a PHP bug #62577 (https://bugs.php.net/bug.php?id=62577)">simplexml_load_file($filename, $class_name, $options)</error>;
<error descr="This can be affected by a PHP bug #62577 (https://bugs.php.net/bug.php?id=62577)">simplexml_load_file($filename, $class_name, $options, $ns)</error>;
<error descr="This can be affected by a PHP bug #62577 (https://bugs.php.net/bug.php?id=62577)">simplexml_load_file($filename, $class_name, $options, $ns, $is_prefix)</error>;
